<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".view.Register"
    >
    <include layout="@layout/toolbar_layout"/>

    <LinearLayout
        android:background="@drawable/form_transparency"
        android:gravity="center"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="50dp"
        android:translationZ="1dp"
        >
        <TextView
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/form_name"
            style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
            />

        <EditText
            android:id="@+id/etName"
            android:hint="@string/form_name_hint"
            android:inputType="textPersonName"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            style="@style/Widget.AppCompat.Button"
            />

        <TextView
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/form_email"
            style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
            />

        <EditText
            android:id="@+id/etEmail"
            android:hint="@string/form_email_hint"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            style="@style/Widget.AppCompat.Button"
            />

        <TextView
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/form_login"
            style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
            />

        <EditText
            android:id="@+id/etLogin"
            android:hint="@string/form_login_hint"
            android:inputType="textPersonName"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            style="@style/Widget.AppCompat.Button"
            />

        <TextView
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/form_password"
            style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
            />

        <EditText
            android:id="@+id/etPassword"
            android:hint="@string/form_password_hint"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            style="@style/Widget.AppCompat.Button"
            />

        <LinearLayout
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            >
            <Button
                android:id="@+id/btRegisterRegister"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:onClick="register"
                android:text="@string/button_finalize_register"
                style="@style/Widget.AppCompat.Button.Colored"
                />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
