<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="3dp"
    android:columnOrderPreserved="true"
    android:background="@color/colorTextButton"
    android:orientation="horizontal"
    android:padding="10dp">

    <TableRow android:layout_gravity="start|center">
        <LinearLayout android:orientation="vertical">
            <TextView
                android:id="@+id/tvTicketType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ticket_type_example" />

            <TextView
                android:id="@+id/tvTicketPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ticket_price_example"/>
        </LinearLayout>

    </TableRow>

    <TableRow android:layout_gravity="center|end">
        <LinearLayout android:orientation="horizontal">
            <Button
                android:id="@+id/btLess"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:background="@android:drawable/toast_frame"
                android:text="@string/button_less" />

            <TextView
                android:id="@+id/tvTicketAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/ticket_amount"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btMore"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:background="@android:drawable/toast_frame"
                android:text="@string/button_more" />
        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvCurrency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/currency"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/tvTotalPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:gravity="center"
                android:text="@string/total_price"
                android:textAlignment="center" />

        </LinearLayout>

    </TableRow>

</GridLayout>
