<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/action_search"
        android:title="search"
        android:icon="@mipmap/searchicon"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_home"
        android:title="@string/action_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_login"
        android:title="@string/action_login"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="ifRoom"
        android:visible="false" />

</menu>