<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:columnOrderPreserved="true"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:padding="10dp"
    >
    <TableRow android:layout_gravity="start|center">
        <LinearLayout android:orientation="vertical">
            <TextView
                android:id="@+id/tvTicketType"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/ticket_type_example"
                android:textColor="@android:color/white"
                />

            <TextView
                android:id="@+id/tvTicketPrice"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/ticket_price_example"
                android:textColor="@android:color/white"
                />
        </LinearLayout>

    </TableRow>

    <TableRow android:layout_gravity="center|end">
        <LinearLayout
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/tvCurrency"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/currency"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                />

            <TextView
                android:id="@+id/tvTotalPrice"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginStart="2dp"
                android:text="@string/total_price"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                />

        </LinearLayout>

        <LinearLayout android:orientation="horizontal">
            <Button
                android:id="@+id/btLess"
                android:background="@android:drawable/toast_frame"
                android:layout_gravity="center"
                android:layout_height="25dp"
                android:layout_width="25dp"
                android:text="@string/button_less"
                />

            <TextView
                android:id="@+id/tvTicketAmount"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:text="@string/ticket_amount"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                />

            <Button
                android:id="@+id/btMore"
                android:background="@android:drawable/toast_frame"
                android:layout_gravity="center"
                android:layout_height="25dp"
                android:layout_width="25dp"
                android:text="@string/button_more"
                />

        </LinearLayout>
    </TableRow>
</GridLayout>
