<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="3dp"
    android:columnOrderPreserved="true"
    android:background="@color/colorTextButton"
    android:orientation="horizontal"
    android:padding="10dp">

    <LinearLayout
        android:gravity="center"
        android:layout_alignParentStart="true"
        android:layout_gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTicketType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ticket_type_example" />
        <TextView
            android:id="@+id/tvTicketPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ticket_price_example"/>

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ticket_label_amount"/>
        <TextView
            android:id="@+id/tvTicketAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ticket_amount" />

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ticket_label_total_price" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/currency" />
            <TextView
                android:id="@+id/tvTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ticket_price_example"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
