<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.PurchaseDetails">

    <include layout="@layout/toolbar_layout"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvEventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_example_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/event_label_date"/>

        <TextView
            android:id="@+id/tvEventDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_date"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/event_label_local"/>

        <TextView
            android:id="@+id/tvEventLocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_local"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvTickets"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:scrollbars="vertical">
        </android.support.v7.widget.RecyclerView>

    </LinearLayout>








</LinearLayout>