<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PaymentData">


    <include layout="@layout/toolbar_layout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvCardHolderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_cardHolderName" />

        <EditText
            android:id="@+id/etCardHolderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvCardNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_cardNumber" />

        <EditText
            android:id="@+id/etCardNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvValid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_valid" />

        <EditText
            android:id="@+id/etValid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/form_valid_hint"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvSecurityCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_securityCode" />

        <EditText
            android:id="@+id/etSecurityCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:onClick="back"
                android:text="@string/button_back" />

            <Button
                android:id="@+id/btAdvance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:onClick="advance"
                android:text="@string/button_advance" />

        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>