<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".view.Login"
    >
    <include layout="@layout/toolbar_layout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:background="@drawable/form_transparency"
        android:gravity="center"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="50dp"
        android:translationZ="1dp"
        >
        <TextView
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/form_login"
            style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
            />

        <EditText
            android:id="@+id/etLogin"
            android:hint="@string/form_login_hint"
            android:inputType="textPersonName"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            style="@style/Widget.AppCompat.Button"
            />

        <TextView
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/form_password"
            style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
            />

        <EditText
            android:id="@+id/etPassword"
            android:hint="@string/form_password_hint"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            style="@style/Widget.AppCompat.Button"
            />

        <LinearLayout
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/btRegister"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:onClick="register"
                android:text="@string/button_register"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                />

            <Button
                android:id="@+id/btLogin"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:onClick="login"
                android:text="@string/button_login"
                style="@style/Widget.AppCompat.Button.Colored"
                />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>